--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "car-rental",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "nodemon --exec ts-node --project tsconfig.json src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
